# ViMantic-ROSNode

./: .gitignore  .gitmodules  README.md
ViMantic/: CMakeLists.txt  package.xml
ViMantic/launch/: ViMantic.launch  ViMantic_Home_Detectron.launch  ViMantic_Home_mxnet.launch  ViMantic_Home_mxnet.rviz  ViMantic_RobotAtHome_detectron.launch  ViMantic_RobotAtHome_detectron.rviz  ViMantic_RobotAtHome_mxnet.launch  ViMantic_RobotAtHome_mxnet.rviz  ViMantic_RobotAtVirtualHome_detectron.launch  ViMantic_RobotAtVirtualHome_detectron.rviz  ViMantic_RobotAtVirtualHome_mxnet.launch  ViMantic_RobotAtVirtualHome_mxnet.rviz  ViMantic_VirtualHome_Detectron.launch  ViMantic_home_detectron.launch  ViMantic_home_mxnet.launch  ViMantic_home_mxnet.rviz  ViMantic_virtualHome_detectron.launch  ViMantic_virtualHome_detectron.rviz
ViMantic/maps/: ViMantic_House1.yaml  ViMantic_House10.yaml  ViMantic_House11.yaml  ViMantic_House12.yaml  ViMantic_House13.yaml  ViMantic_House14.yaml  ViMantic_House15.yaml  ViMantic_House16.yaml  ViMantic_House17.yaml  ViMantic_House18.pgm  ViMantic_House18.yaml  ViMantic_House19.yaml  ViMantic_House2.yaml  ViMantic_House21.yaml  ViMantic_House22.yaml  ViMantic_House24.yaml  ViMantic_House25.yaml  ViMantic_House26.yaml  ViMantic_House27.yaml  ViMantic_House28.yaml  ViMantic_House29.yaml  ViMantic_House3.yaml  ViMantic_House4.yaml  ViMantic_House5.yaml  ViMantic_House6.yaml  ViMantic_House7.yaml  ViMantic_House8.yaml  ViMantic_House9.yaml
ViMantic/msg/: Detection.msg  DetectionArray.msg  ObjectHypothesis.msg  SemanticObject.msg  SemanticObjectArray.msg  SemanticRoom.msg
ViMantic/src/: ViMantic_RobotAtHome_detectron_node.py  ViMantic_RobotAtHome_mxnet_node.py  ViMantic_robotHome_Detectron_node.py  (+4 more)
ViMantic_Detectron2/: CMakeLists.txt  package.xml
(+29 files in other folders)
